SERVER-74680 Refactor EFT truncation