src/mongo/db/storage/devnull/ephemeral_catalog_record_store.cpp
@@ -76,26 +76,17 @@ class EphemeralForTestRecordStore::TruncateChange : public RecoveryUnit::Change 
 public:
     TruncateChange(OperationContext* opCtx, Data* data, const RecordId& begin, const RecordId& end)
         : _opCtx(opCtx), _data(data), _dataSize(0) {
-        using std::swap;
-
         stdx::lock_guard<stdx::recursive_mutex> lock(_data->recordsMutex);
 
-        auto it = _data->records.begin();
-        while (it != _data->records.end() && it->first < begin) {
-            it++;
+        for (auto it = _data->records.begin(); it != _data->records.end();) {
+            if (it->first >= begin && it->first <= end) {
+                _deletedRecords.try_emplace(it->first, it->second);
+                _dataSize += it->first.memUsage() + it->second.size;
+                it = _data->records.erase(it);
+            } else {
+                it++;
+            }
         }
-
-        auto beginId = it->first;
-
-        while (it != _data->records.end() && it->first <= end) {
-            _deletedRecords.try_emplace(it->first, it->second);
-            // RecordId size + value size.
-            _dataSize += it->first.memUsage() + it->second.size;
-            it++;
-        }
-        auto endId = it->first;
-
-        _data->records.erase(_data->records.find(beginId), _data->records.find(endId));
         _data->dataSize -= _dataSize;
     }
 
